--- a/projects/aas-portal/src/app/about/about.component.html
+++ b/projects/aas-portal/src/app/about/about.component.html
@@ -26,3 +26,5 @@ zur Foerderung der angewandten Forschung e.V.</p>
     <h2>Server Messages</h2>
     <fhg-message-table [collection]="messages"></fhg-message-table>
 </div>
+
+<ng-template #aboutToolbar></ng-template>
