--- a/projects/aas-portal/src/app/start/start.component.html
+++ b/projects/aas-portal/src/app/start/start.component.html
@@ -7,5 +7,75 @@
  !---------------------------------------------------------------------------->
 
 <div id="start-container" class="container-fluid">
-    <fhg-aas-table #aasTable [viewMode]="viewMode" [showAll]="showAll" [filter]="filter" [documents]="documents"></fhg-aas-table>
+    <fhg-aas-table #aasTable [viewMode]="viewMode" [showAll]="showAll" [filter]="filter"
+        [documents]="documents"></fhg-aas-table>
 </div>
+
+<ng-content />
+<ng-template #startToolbar>
+    <div class="btn-group me-2">
+        <div ngbDropdown class="btn-group" role="group">
+            <button type="button" class="btn btn-primary" ngbDropdownToggle id="selectEndpoints">
+                <i class="bi bi-stack-overflow"></i>
+                <span>&nbsp;</span>
+                <span>{{endpoint | async}}</span>
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu" id="selectEndpoints">
+                <ng-container *ngFor="let dropdownItem of endpoints | async">
+                    <button ngbDropdownItem (click)="setWorkspace(dropdownItem.name)">{{dropdownItem.name}}</button>
+                </ng-container>
+            </div>
+        </div>
+        <div ngbDropdown class="btn-group" role="group">
+            <button type="button" class="btn btn-primary" ngbDropdownToggle id="menuEndpoints">
+                <i class="bi bi-gear"></i>
+            </button>
+            <div ngbDropdownMenu class="dropdown-menu" id="menuEndpoints">
+                <button ngbDropdownItem (click)="addEndpoint()" translate>CMD_ADD_ENDPOINT</button>
+                <button ngbDropdownItem (click)="removeEndpoint()" translate>CMD_REMOVE_ENDPOINT</button>
+                <button ngbDropdownItem (click)="reset()" translate>CMD_RESET_CONFIGURATION</button>
+            </div>
+        </div>
+    </div>
+    <div class="btn-group me-2">
+        <button type="button" class="btn btn-primary" (click)="uploadDocument()" [disabled]="!canUploadDocument()">
+            <i class="bi bi-upload"></i>
+        </button>
+        <button type="button" class="btn btn-primary" (click)="downloadDocument()" [disabled]="!canDownloadDocument()">
+            <i class="bi bi-download"></i>
+        </button>
+        <button type="button" class="btn btn-primary" (click)="deleteDocument()" [disabled]="!canDeleteDocument()">
+            <i class="bi bi-trash"></i>
+        </button>
+    </div>
+    <div class="btn-group me-2" id="viewModeGroup">
+        <input type="radio" [value]="'list'" class="btn-check" id="viewModeList" name="viewModeGroup" autocomplete="off"
+            (change)="setViewMode('list')" [checked]="viewMode === 'list'">
+        <label class="btn btn-primary" for="viewModeList">
+            <i class="bi bi-list"></i>
+        </label>
+        <input type="radio" [value]="'tree'" class="btn-check" id="viewModeTree" name="viewModeGroup" autocomplete="off"
+            (change)="setViewMode('tree')" [checked]="viewMode === 'tree'">
+        <label class="btn btn-primary" for="viewModeTree">
+            <i class="bi bi-diagram-3"></i>
+        </label>
+    </div>
+    <div class="btn-group me-2">
+        <div ngbDropdown class="btn-group" role="group">
+            <button type="button" class="btn btn-primary" ngbDropdownToggle id="selectEndpoints"
+                translate>LABEL_VIEWS</button>
+            <div ngbDropdownMenu class="dropdown-menu" id="selectEndpoints">
+                <button ngbDropdownItem (click)="viewUserFeedback()" [disabled]="!canViewUserFeedback()"
+                    translate>CMD_VIEW_USER_FEEDBACK</button>
+                <button ngbDropdownItem (click)="viewNameplate()" [disabled]="!this.canViewNameplate()"
+                    translate>CMD_VIEW_NAMEPLATE</button>
+            </div>
+        </div>
+    </div>
+    <div class="input-group flex-grow-1 me-2" [hidden]="viewMode === 'tree'">
+        <div class="input-group-text"><i class="bi bi-filter"></i></div>
+        <input #textInput type="text" class="form-control" [value]="filter | async"
+            [placeholder]="'PLACEHOLDER_FILTER' | translate" (input)="applyFilter(textInput.value)"
+            [disabled]="viewMode === 'tree'">
+    </div>
+</ng-template>
