--- a/projects/aas-portal/src/app/main/main.component.html
+++ b/projects/aas-portal/src/app/main/main.component.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbar">
                 <ul ngbNav #nav="ngbNav" [(activeId)]="activeId" class="navbar-nav me-auto">
                     <li [ngbNavItem]="link.id" *ngFor="let link of links">
-                        <a ngbNavLink routerLink="{{link.url}}" routerLinkActive="active">{{link.name | translate}}</a>
+                        <a ngbNavLink routerLink="{{link.url}}" routerLinkActive="active" skipLocationChange="true">{{link.name | translate}}</a>
                     </li>
                 </ul>
                 <fhg-localize class="text-primary" [languages]="['en-us', 'de-de']"></fhg-localize>
