--- a/projects/aas-lib/src/lib/aas-table/aas-table.component.html
+++ b/projects/aas-lib/src/lib/aas-table/aas-table.component.html
@@ -34,9 +34,8 @@
                 <img class="img-fluid" width="24" height="24" [src]="getFormatIcon(row)" alt="" />
             </td>
             <td>
-                <a *ngIf="canOpen(row)" class="text-nowrap" href="javascript:void(0);" [name]="row.name"
-                    (click)="open(row)">{{row.name | max:60}}</a>
-                <div *ngIf="!canOpen(row)" class="text-nowrap text-secondary">{{row.name | max:60}}</div>
+                <a class="text-nowrap" href="javascript:void(0);" [name]="row.name" (click)="open(row)">{{row.name |
+                    max:60}}</a>
             <td>
                 <div class="text-nowrap" placement="top" [ngbTooltip]="getToolTip(row)">{{row.id | max:80}}</div>
             </td>
@@ -74,9 +73,7 @@
                         <img class="img-fluid" width="24" height="24" [src]="getFormatIcon(row)" alt="" />
                     </div>
                     <div class="ms-2 flex-grow-1">
-                        <a *ngIf="canOpen(row)" class="text-nowrap" href="javascript:void(0);"
-                            (click)="open(row)">{{row.name | max:60}}</a>
-                        <div *ngIf="!canOpen(row)" class="text-nowrap text-secondary">{{row.name | max:60}}</div>
+                        <a class="text-nowrap" href="javascript:void(0);" (click)="open(row)">{{row.name | max:60}}</a>
                     </div>
                 </div>
             </td>
