--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -21,7 +21,7 @@
                     <div class="fw-bold text-end small text-nowrap" translate>LABEL_ASSET_ID</div>
                 </div>
                 <div class="d-flex flex-column flex-grow-1 ps-1">
-                    <div class="small text-nowrap">{{endpoint}}</div>
+                    <div class="small text-nowrap">{{address}}</div>
                     <div class="small text-nowrap">{{idShort}}</div>
                     <div class="small text-nowrap">{{id}}</div>
                     <div class="small text-nowrap">{{version}}</div>
