--- a/projects/aas-portal/src/app/start/start.component.html
+++ b/projects/aas-portal/src/app/start/start.component.html
@@ -15,19 +15,19 @@
     <div class="btn-group me-2">
         <button type="button" class="btn btn-primary" (click)="aasTable.skipStart()"
             [disabled]="aasTable.isFirstPage | async">
-            <i class="bi bi-skip-start"></i>
+            <i class="bi bi-chevron-bar-left"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="aasTable.skipBackward()"
             [disabled]="aasTable.isFirstPage | async">
-            <i class="bi bi-skip-backward"></i>
+            <i class="bi bi-chevron-left"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="aasTable.skipForward()"
             [disabled]="aasTable.isLastPage | async">
-            <i class="bi bi-skip-forward"></i>
+            <i class="bi bi-chevron-right"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="aasTable.skipEnd()"
             [disabled]="aasTable.isLastPage | async">
-            <i class="bi bi-skip-end"></i>
+            <i class="bi bi-chevron-bar-right"></i>
         </button>
     </div>
     <div class="btn-group me-2">
