--- a/projects/aas-portal/src/app/start/start.component.html
+++ b/projects/aas-portal/src/app/start/start.component.html
@@ -13,19 +13,22 @@
 
 <ng-template #startToolbar>
     <div class="btn-group me-2">
-        <button type="button" class="btn btn-primary" (click)="aasTable.skipStart()"
+        <button type="button" class="btn btn-primary" (click)="aasTable.firstPage()"
             [disabled]="aasTable.isFirstPage | async">
             <i class="bi bi-chevron-bar-left"></i>
         </button>
-        <button type="button" class="btn btn-primary" (click)="aasTable.skipBackward()"
+        <button type="button" class="btn btn-primary" (click)="aasTable.previousPage()"
             [disabled]="aasTable.isFirstPage | async">
             <i class="bi bi-chevron-left"></i>
         </button>
-        <button type="button" class="btn btn-primary" (click)="aasTable.skipForward()"
+        <button type="button" class="btn btn-outline-primary" [disabled]="true" [hidden]="(filter | async) !== ''">
+            {{aasTable.totalCount | async}}
+        </button>
+        <button type="button" class="btn btn-primary" (click)="aasTable.nextPage()"
             [disabled]="aasTable.isLastPage | async">
             <i class="bi bi-chevron-right"></i>
         </button>
-        <button type="button" class="btn btn-primary" (click)="aasTable.skipEnd()"
+        <button type="button" class="btn btn-primary" (click)="aasTable.lastPage()"
             [disabled]="aasTable.isLastPage | async">
             <i class="bi bi-chevron-bar-right"></i>
         </button>
