--- a/projects/aas-lib/src/lib/aas-table/aas-table.component.html
+++ b/projects/aas-lib/src/lib/aas-table/aas-table.component.html
@@ -6,7 +6,7 @@
  !
  !---------------------------------------------------------------------------->
 
-<table *ngIf="viewMode === 'list'" class="table table-sm table-hover table-striped">
+<table *ngIf="viewMode === 'list'; else treeView" class="table table-sm table-hover table-striped">
     <thead>
         <tr>
             <th class="th-w-checkbox">
@@ -43,44 +43,48 @@
         </tr>
     </tbody>
 </table>
-<table *ngIf="viewMode === 'tree'" class="table table-sm table-borderless table-hover table-striped">
-    <thead>
-        <tr>
-            <th class="aas-th-name"></th>
-            <th class="aas-th-value"></th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let row of rows | async">
-            <td>
-                <div class="d-flex" style="overflow-x: hidden">
-                    <div [ngStyle]="{'width': (row.level * 16) + 'px'}"></div>
-                    <a *ngIf="!row.isLeaf && !row.expanded && row.hasChildren" href="javascript:void(0);"
-                        (click)="expand(row)">
-                        <div class="text-dark">
-                            <i class="bi bi-plus-square"></i>
+
+<ng-template #treeView>
+    <table class="table table-sm table-borderless table-hover table-striped">
+        <thead>
+            <tr>
+                <th class="aas-th-name"></th>
+                <th class="aas-th-value"></th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let row of rows | async">
+                <td>
+                    <div class="d-flex" style="overflow-x: hidden">
+                        <div [ngStyle]="{'width': (row.level * 16) + 'px'}"></div>
+                        <a *ngIf="!row.isLeaf && !row.expanded && row.hasChildren" href="javascript:void(0);"
+                            (click)="expand(row)">
+                            <div class="text-dark">
+                                <i class="bi bi-plus-square"></i>
+                            </div>
+                        </a>
+                        <div *ngIf="!row.isLeaf && !row.expanded && !row.hasChildren" class="text-muted">
+                            <i class="bi bi-square"></i>
                         </div>
-                    </a>
-                    <div *ngIf="!row.isLeaf && !row.expanded && !row.hasChildren" class="text-muted">
-                        <i class="bi bi-square"></i>
-                    </div>
-                    <a *ngIf="!row.isLeaf && row.expanded" href="javascript:void(0);" (click)="collapse(row)">
-                        <div class="text-dark">
-                            <i class="bi bi-dash-square"></i>
+                        <a *ngIf="!row.isLeaf && row.expanded" href="javascript:void(0);" (click)="collapse(row)">
+                            <div class="text-dark">
+                                <i class="bi bi-dash-square"></i>
+                            </div>
+                        </a>
+                        <div *ngIf="row.isLeaf" class="text-muted wh-4"></div>
+                        <div class="ms-2">
+                            <img class="img-fluid" width="40" height="40" [src]="row.thumbnail" alt="" />
                         </div>
-                    </a>
-                    <div *ngIf="row.isLeaf" class="text-muted wh-4"></div>
-                    <div class="ms-2">
-                        <img class="img-fluid" width="40" height="40" [src]="row.thumbnail" alt="" />
+                        <div class="ms-2 flex-grow-1">
+                            <a class="text-nowrap" href="javascript:void(0);" (click)="open(row)">{{row.name |
+                                max:60}}</a>
+                        </div>
                     </div>
-                    <div class="ms-2 flex-grow-1">
-                        <a class="text-nowrap" href="javascript:void(0);" (click)="open(row)">{{row.name | max:60}}</a>
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="text-nowrap" placement="top" [ngbTooltip]="getToolTip(row)">{{row.id | max:80}}</div>
-            </td>
-        </tr>
-    </tbody>
-</table>
+                </td>
+                <td>
+                    <div class="text-nowrap" placement="top" [ngbTooltip]="getToolTip(row)">{{row.id | max:80}}</div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</ng-template>
